deploy: 0bcfd36c5e403a9f4eb1ecd16512f08dafe00e61

--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -41,6 +41,7 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "{'numberRows': 1461,\n",
@@ -52,9 +53,8 @@
        "  'weather': {'unique': 5, 'dataType': 'string'}}}"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -68,18 +68,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number: 1\n",
-      "Atoms: [fact(numberRows,1461), fact(field,date), fact(field,precipitation), fact(field,temp_max), fact(field,temp_min), fact(field,wind), fact(field,weather), fact(unique,date,1461), fact(dataType,date,date), fact(unique,precipitation,111), fact(dataType,precipitation,number), fact(unique,temp_max,67), fact(dataType,temp_max,number), fact(unique,temp_min,55), fact(dataType,temp_min,number), fact(unique,wind,79), fact(dataType,wind,number), fact(unique,weather,5), fact(dataType,weather,string)]\n",
-      "\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[Model(answer_set=[fact(numberRows,1461), fact(field,date), fact(field,precipitation), fact(field,temp_max), fact(field,temp_min), fact(field,wind), fact(field,weather), fact(unique,date,1461), fact(dataType,date,date), fact(unique,precipitation,111), fact(dataType,precipitation,number), fact(unique,temp_max,67), fact(dataType,temp_max,number), fact(unique,temp_min,55), fact(dataType,temp_min,number), fact(unique,wind,79), fact(dataType,wind,number), fact(unique,weather,5), fact(dataType,weather,string)], cost=[], number=1)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
     }
    ],
    "source": [
     "program = dict_to_facts(schema)\n",
-    "run_clingo(program)"
+    "result = run_clingo(program)\n",
+    "\n",
+    "list(result)"
    ]
   },
   {
@@ -106,7 +109,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
