--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -45,12 +45,24 @@
      "data": {
       "text/plain": [
        "{'numberRows': 1461,\n",
-       " 'field': {'date': {'unique': 1461, 'dataType': 'date'},\n",
-       "  'precipitation': {'unique': 111, 'dataType': 'number'},\n",
-       "  'temp_max': {'unique': 67, 'dataType': 'number'},\n",
-       "  'temp_min': {'unique': 55, 'dataType': 'number'},\n",
-       "  'wind': {'unique': 79, 'dataType': 'number'},\n",
-       "  'weather': {'unique': 5, 'dataType': 'string'}}}"
+       " 'field': {'date': {'dataType': 'date', 'unique': 1461},\n",
+       "  'precipitation': {'dataType': 'number',\n",
+       "   'unique': 111,\n",
+       "   'min': 0,\n",
+       "   'max': 55,\n",
+       "   'std': 6},\n",
+       "  'temp_max': {'dataType': 'number',\n",
+       "   'unique': 67,\n",
+       "   'min': -1,\n",
+       "   'max': 35,\n",
+       "   'std': 7},\n",
+       "  'temp_min': {'dataType': 'number',\n",
+       "   'unique': 55,\n",
+       "   'min': -7,\n",
+       "   'max': 18,\n",
+       "   'std': 5},\n",
+       "  'wind': {'dataType': 'number', 'unique': 79, 'min': 0, 'max': 9, 'std': 1},\n",
+       "  'weather': {'dataType': 'string', 'unique': 5, 'freq': 714}}}"
       ]
      },
      "metadata": {},
@@ -71,7 +83,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[Model(answer_set=[fact(numberRows,1461), fact(field,date), fact(field,precipitation), fact(field,temp_max), fact(field,temp_min), fact(field,wind), fact(field,weather), fact(unique,date,1461), fact(dataType,date,date), fact(unique,precipitation,111), fact(dataType,precipitation,number), fact(unique,temp_max,67), fact(dataType,temp_max,number), fact(unique,temp_min,55), fact(dataType,temp_min,number), fact(unique,wind,79), fact(dataType,wind,number), fact(unique,weather,5), fact(dataType,weather,string)], cost=[], number=1)]"
+       "[Model(answer_set=[fact(numberRows,1461), fact(field,date), fact(field,precipitation), fact(field,temp_max), fact(field,temp_min), fact(field,wind), fact(field,weather), fact(dataType,date,date), fact(unique,date,1461), fact(dataType,precipitation,number), fact(unique,precipitation,111), fact(min,precipitation,0), fact(max,precipitation,55), fact(std,precipitation,6), fact(dataType,temp_max,number), fact(unique,temp_max,67), fact(max,temp_max,35), fact(std,temp_max,7), fact(dataType,temp_min,number), fact(unique,temp_min,55), fact(max,temp_min,18), fact(std,temp_min,5), fact(dataType,wind,number), fact(unique,wind,79), fact(min,wind,0), fact(max,wind,9), fact(std,wind,1), fact(dataType,weather,string), fact(unique,weather,5), fact(freq,weather,714), fact(min,temp_max,-1), fact(min,temp_min,-7)], cost=[], number=1)]"
       ]
      },
      "metadata": {},
