--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from draco import run_clingo, dict_to_facts, schema_from_dataframe"
+    "from draco import schema_from_dataframe, dict_to_facts"
    ]
   },
   {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +36,15 @@
    ]
   },
   {
+   "source": [
+    "We can then call `schema_from_dataframe` to get schema information from the pandas dataframe. The schema information is a dictionary."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +73,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 18
     }
    ],
    "source": [
@@ -75,34 +82,63 @@
    ]
   },
   {
+   "source": [
+    "We can then convert the schema dictionary into facts that Dracos constraint solver can use with `dict_to_facts`. The function returns a list of facts. The solver will be able to parse these facts and consider them in the recommendation process."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[Model(answer_set=[fact(numberRows,1461), fact(field,date), fact(field,precipitation), fact(field,temp_max), fact(field,temp_min), fact(field,wind), fact(field,weather), fact(dataType,date,date), fact(unique,date,1461), fact(dataType,precipitation,number), fact(unique,precipitation,111), fact(min,precipitation,0), fact(max,precipitation,55), fact(std,precipitation,6), fact(dataType,temp_max,number), fact(unique,temp_max,67), fact(max,temp_max,35), fact(std,temp_max,7), fact(dataType,temp_min,number), fact(unique,temp_min,55), fact(max,temp_min,18), fact(std,temp_min,5), fact(dataType,wind,number), fact(unique,wind,79), fact(min,wind,0), fact(max,wind,9), fact(std,wind,1), fact(dataType,weather,string), fact(unique,weather,5), fact(freq,weather,714), fact(min,temp_max,-1), fact(min,temp_min,-7)], cost=[], number=1)]"
+       "['fact(numberRows,1461).',\n",
+       " 'fact(field,date).',\n",
+       " 'fact(dataType,date,date).',\n",
+       " 'fact(unique,date,1461).',\n",
+       " 'fact(field,precipitation).',\n",
+       " 'fact(dataType,precipitation,number).',\n",
+       " 'fact(unique,precipitation,111).',\n",
+       " 'fact(min,precipitation,0).',\n",
+       " 'fact(max,precipitation,55).',\n",
+       " 'fact(std,precipitation,6).',\n",
+       " 'fact(field,temp_max).',\n",
+       " 'fact(dataType,temp_max,number).',\n",
+       " 'fact(unique,temp_max,67).',\n",
+       " 'fact(min,temp_max,-1).',\n",
+       " 'fact(max,temp_max,35).',\n",
+       " 'fact(std,temp_max,7).',\n",
+       " 'fact(field,temp_min).',\n",
+       " 'fact(dataType,temp_min,number).',\n",
+       " 'fact(unique,temp_min,55).',\n",
+       " 'fact(min,temp_min,-7).',\n",
+       " 'fact(max,temp_min,18).',\n",
+       " 'fact(std,temp_min,5).',\n",
+       " 'fact(field,wind).',\n",
+       " 'fact(dataType,wind,number).',\n",
+       " 'fact(unique,wind,79).',\n",
+       " 'fact(min,wind,0).',\n",
+       " 'fact(max,wind,9).',\n",
+       " 'fact(std,wind,1).',\n",
+       " 'fact(field,weather).',\n",
+       " 'fact(dataType,weather,string).',\n",
+       " 'fact(unique,weather,5).',\n",
+       " 'fact(freq,weather,714).']"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 19
     }
    ],
    "source": [
     "program = dict_to_facts(schema)\n",
-    "result = run_clingo(program)\n",
-    "\n",
-    "list(result)"
+    "list(program)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
