deploy: 9b89f4eec4cae6c6a135b7d25ca8e98b1737a35c

--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -15,7 +15,7 @@
     "Available functions\n",
     "-------------------\n",
     "\n",
-    "The main functions allow you to get the schema from a Pandas dataframe or a file. These functions return a schema as a dicitonary, which you can encode as Answer Set Programming facts using our generic `dict_to_facts` encoder.\n",
+    "The main functions allow you to get the schema from a Pandas dataframe or a file. These functions return a schema as a dictionary, which you can encode as Answer Set Programming facts using our generic `dict_to_facts` encoder.\n",
     "\n",
     ".. autofunction:: draco.schema.schema_from_dataframe\n",
     ".. autofunction:: draco.schema.schema_from_file\n",
