deploy: 34ff9f407b85ec71579cc14ad3b7f4d5b1c0423a

--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,tick).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,temperature).',\n 'property(scale,root,3).',\n 'attribute((scale,channel),3,x).',\n 'attribute((scale,type),3,linear).']"
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,tick).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,temperature).',\n 'property(scale,root,3).',\n 'attribute((scale,channel),3,x).',\n 'attribute((scale,type),3,log).']"
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,condition).',\n 'attribute((field,type),0,string).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,bar).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,condition).',\n 'property(encoding,1,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,field),3,count).',\n 'property(scale,root,4).',\n 'attribute((scale,channel),4,x).',\n 'attribute((scale,type),4,ordinal).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,y).',\n 'attribute((scale,type),5,linear).']"
+      "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(field,root,1).',\n 'attribute((field,name),1,condition).',\n 'attribute((field,type),1,string).',\n 'property(mark,root,2).',\n 'attribute((mark,type),2,bar).',\n 'property(encoding,2,3).',\n 'attribute((encoding,channel),3,x).',\n 'attribute((encoding,field),3,condition).',\n 'property(encoding,2,4).',\n 'attribute((encoding,channel),4,y).',\n 'attribute((encoding,field),4,temperature).',\n 'attribute((encoding,aggregate),4,mean).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,x).',\n 'attribute((scale,type),5,ordinal).',\n 'property(scale,root,6).',\n 'attribute((scale,channel),6,y).',\n 'attribute((scale,type),6,linear).']"
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
    "source": [
     "# Bar Chart\n",
     "\n",
-    "show(data(['condition']), {\n",
+    "show(data(['condition', 'temperature']), {\n",
     "    \"mark\": [{\n",
     "        \"type\": \"bar\",\n",
     "        \"encoding\": [{\n",
@@ -159,7 +159,8 @@
     "            \"field\": \"condition\"\n",
     "        }, {\n",
     "            \"channel\": \"y\",\n",
-    "            \"field\": \"count\"\n",
+    "            \"field\": \"temperature\",\n",
+    "            \"aggregate\": \"mean\"\n",
     "        }]\n",
     "    }],\n",
     "    \"scale\": [{\n",
@@ -174,22 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,mark_type),1,bar).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,condition).',\n 'property(encoding,1,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,aggregate),3,count).',\n 'property(scale,root,4).',\n 'attribute((scale,channel),4,x).',\n 'attribute((scale,type),4,ordinal).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,y).',\n 'attribute((scale,type),5,linear).']"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AssertionError",
+     "evalue": "Invalid spec",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-26992af95d72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Histogram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m show(data(['temperature']), {\n\u001b[0m\u001b[1;32m      4\u001b[0m     \"mark\": [{\n\u001b[1;32m      5\u001b[0m         \u001b[0;34m\"mark_type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"bar\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-4fec6bd537c7>\u001b[0m in \u001b[0;36mshow\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mspec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict_union\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprog\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict_to_facts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mcheck_spec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprog\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Invalid spec\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mprog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Invalid spec"
+     ]
     }
    ],
    "source": [
     "# Histogram\n",
     "\n",
-    "show(data(['temperature']), {\n",
+    "show(data(['condition']), {\n",
     "    \"mark\": [{\n",
     "        \"mark_type\": \"bar\",\n",
     "        \"encoding\": [{\n",
