--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -10,26 +10,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "```{eval-rst}\n",
-    "Available functions\n",
-    "-------------------\n",
+    "## Available functions\n",
     "\n",
     "The main functions allow you to get the schema from a Pandas dataframe or a file. These functions return a schema as a dictionary, which you can encode as Answer Set Programming facts using our generic `dict_to_facts` encoder.\n",
     "\n",
+    "\n",
+    "```{eval-rst}\n",
     ".. autofunction:: draco.schema.schema_from_dataframe\n",
     ".. autofunction:: draco.schema.schema_from_file\n",
     "```"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Usage Example"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
