--- a/_sources/api/spec.ipynb
+++ b/_sources/api/spec.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "scheduled-topic",
    "metadata": {},
    "source": [
     "# Specifications\n",
@@ -12,20 +11,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-cooperative",
    "metadata": {},
    "source": [
     "## Available functions\n",
     "\n",
     "```{eval-rst}\n",
-    ".. automodule:: draco.spec_utils\n",
+    ".. automodule:: draco.spec\n",
     "   :members:\n",
     "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "minute-understanding",
    "metadata": {},
    "source": [
     "## Usage Example"
@@ -34,7 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "accepting-dressing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "olympic-salvation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,14 +64,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "premium-finland",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
      "execution_count": 3,
      "metadata": {},
@@ -90,14 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "leading-mediterranean",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "[]"
-      ]
+      "text/plain": "[]"
      },
      "execution_count": 4,
      "metadata": {},
@@ -111,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "outside-basic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,14 +125,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "educated-somalia",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "False"
-      ]
+      "text/plain": "False"
      },
      "execution_count": 6,
      "metadata": {},
@@ -158,14 +143,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "collective-narrow",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "['invalid_domain']"
-      ]
+      "text/plain": "['invalid_domain']"
      },
      "execution_count": 7,
      "metadata": {},
@@ -179,7 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quarterly-dividend",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -187,8 +168,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('draco': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "1417893cfb28aac8f4900ac927ab2a1a6ab7e8af638d894f5471e1fba60b1e80"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
