--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "\n",
     "def show(*args):\n",
     "    spec = dict_union(*args)\n",
-    "    prog = list(dict_to_facts(spec))\n",
+    "    prog = dict_to_facts(spec)\n",
     "    assert check_spec(prog), \"Invalid spec\"\n",
     "    return prog"
    ]
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,tick).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,temperature).',\n 'property(scale,root,3).',\n 'attribute((scale,channel),3,x).',\n 'attribute((scale,type),3,linear).']"
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,tick).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,temperature).',\n 'property(scale,root,3).',\n 'attribute((scale,channel),3,x).',\n 'attribute((scale,type),3,log).']"
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(field,root,1).',\n 'attribute((field,name),1,condition).',\n 'attribute((field,type),1,string).',\n 'property(mark,root,2).',\n 'attribute((mark,type),2,bar).',\n 'property(encoding,2,3).',\n 'attribute((encoding,channel),3,x).',\n 'attribute((encoding,field),3,condition).',\n 'property(encoding,2,4).',\n 'attribute((encoding,channel),4,y).',\n 'attribute((encoding,field),4,temperature).',\n 'attribute((encoding,aggregate),4,mean).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,x).',\n 'attribute((scale,type),5,ordinal).',\n 'property(scale,root,6).',\n 'attribute((scale,channel),6,y).',\n 'attribute((scale,type),6,linear).']"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,20 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Invalid spec",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-26992af95d72>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Histogram\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m show(data(['temperature']), {\n\u001b[0m\u001b[1;32m      4\u001b[0m     \"mark\": [{\n\u001b[1;32m      5\u001b[0m         \u001b[0;34m\"mark_type\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"bar\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-2-4fec6bd537c7>\u001b[0m in \u001b[0;36mshow\u001b[0;34m(*args)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mspec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict_union\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mprog\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict_to_facts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mcheck_spec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprog\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Invalid spec\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mprog\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Invalid spec"
-     ]
+     "data": {
+      "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,condition).',\n 'attribute((field,type),0,string).',\n 'property(mark,root,1).',\n 'attribute((mark,mark_type),1,bar).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,condition).',\n 'property(encoding,1,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,aggregate),3,count).',\n 'property(scale,root,4).',\n 'attribute((scale,channel),4,x).',\n 'attribute((scale,type),4,ordinal).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,y).',\n 'attribute((scale,type),5,linear).']"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -217,14 +213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,mark_type),1,bar).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,field),2,temperature).',\n 'attribute((encoding,binning),2).',\n 'property(encoding,1,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,aggregate),3,count).',\n 'property(scale,root,4).',\n 'attribute((scale,channel),4,x).',\n 'attribute((scale,type),4,ordinal).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,y).',\n 'attribute((scale,type),5,linear).']"
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,14 +253,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(field,root,1).',\n 'attribute((field,name),1,wind).',\n 'attribute((field,type),1,number).',\n 'property(mark,root,2).',\n 'attribute((mark,type),2,point).',\n 'property(encoding,2,3).',\n 'attribute((encoding,channel),3,x).',\n 'attribute((encoding,field),3,temperature).',\n 'property(encoding,2,4).',\n 'attribute((encoding,channel),4,y).',\n 'attribute((encoding,field),4,wind).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,x).',\n 'attribute((scale,type),5,linear).',\n 'property(scale,root,6).',\n 'attribute((scale,channel),6,y).',\n 'attribute((scale,type),6,linear).']"
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(field,root,1).',\n 'attribute((field,name),1,wind).',\n 'attribute((field,type),1,number).',\n 'property(field,root,2).',\n 'attribute((field,name),2,condition).',\n 'attribute((field,type),2,string).',\n 'property(mark,root,3).',\n 'attribute((mark,type),3,point).',\n 'property(encoding,3,4).',\n 'attribute((encoding,channel),4,x).',\n 'attribute((encoding,field),4,temperature).',\n 'property(encoding,3,5).',\n 'attribute((encoding,channel),5,y).',\n 'attribute((encoding,field),5,wind).',\n 'property(encoding,3,6).',\n 'attribute((encoding,channel),6,color).',\n 'attribute((encoding,field),6,condition).',\n 'property(scale,root,7).',\n 'attribute((scale,channel),7,x).',\n 'attribute((scale,type),7,linear).',\n 'property(scale,root,8).',\n 'attribute((scale,channel),8,y).',\n 'attribute((scale,type),8,linear).',\n 'property(scale,root,9).',\n 'attribute((scale,channel),9,color).',\n 'attribute((scale,type),9,ordinal).']"
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,14 +335,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(field,root,1).',\n 'attribute((field,name),1,wind).',\n 'attribute((field,type),1,number).',\n 'property(field,root,2).',\n 'attribute((field,name),2,precipitation).',\n 'attribute((field,type),2,number).',\n 'property(mark,root,3).',\n 'attribute((mark,mark_type),3,point).',\n 'property(encoding,3,4).',\n 'attribute((encoding,channel),4,x).',\n 'attribute((encoding,field),4,temperature).',\n 'property(encoding,3,5).',\n 'attribute((encoding,channel),5,y).',\n 'attribute((encoding,field),5,wind).',\n 'property(encoding,3,6).',\n 'attribute((encoding,channel),6,size).',\n 'attribute((encoding,field),6,precipitation).',\n 'property(scale,root,7).',\n 'attribute((scale,channel),7,x).',\n 'attribute((scale,type),7,linear).',\n 'property(scale,root,8).',\n 'attribute((scale,channel),8,y).',\n 'attribute((scale,type),8,linear).',\n 'property(scale,root,9).',\n 'attribute((scale,channel),9,size).',\n 'attribute((scale,type),9,linear).']"
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(mark,root,1).',\n 'attribute((mark,type),1,bar).',\n 'property(encoding,1,2).',\n 'attribute((encoding,channel),2,x).',\n 'attribute((encoding,aggregate),2,mean).',\n 'attribute((encoding,field),2,temperature).',\n 'property(mark,root,3).',\n 'attribute((mark,type),3,tick).',\n 'property(encoding,3,4).',\n 'attribute((encoding,channel),4,x).',\n 'attribute((encoding,field),4,temperature).',\n 'property(scale,root,5).',\n 'attribute((scale,channel),5,x).',\n 'attribute((scale,type),5,linear).']"
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,14 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(view,root,1).',\n 'property(mark,1,2).',\n 'attribute((mark,mark_type),2,tick).',\n 'property(encoding,2,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,field),3,temperature).',\n 'property(scale,1,4).',\n 'attribute((scale,channel),4,y).',\n 'attribute((scale,type),4,linear).',\n 'property(view,root,5).',\n 'property(mark,5,6).',\n 'attribute((mark,mark_type),6,bar).',\n 'property(encoding,6,7).',\n 'attribute((encoding,channel),7,x).',\n 'attribute((encoding,field),7,temperature).',\n 'property(encoding,6,8).',\n 'attribute((encoding,channel),8,y).',\n 'attribute((encoding,aggregate),8,count).',\n 'property(scale,5,9).',\n 'attribute((scale,channel),9,x).',\n 'attribute((scale,type),9,linear).',\n 'property(scale,5,10).',\n 'attribute((scale,channel),10,y).',\n 'attribute((scale,type),10,linear).']"
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,14 +486,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "['attribute(number_rows,root,100).',\n 'property(field,root,0).',\n 'attribute((field,name),0,temperature).',\n 'attribute((field,type),0,number).',\n 'property(view,root,1).',\n 'property(mark,1,2).',\n 'attribute((mark,type),2,tick).',\n 'property(encoding,2,3).',\n 'attribute((encoding,channel),3,y).',\n 'attribute((encoding,field),3,temperature).',\n 'property(view,root,4).',\n 'property(mark,4,5).',\n 'attribute((mark,type),5,bar).',\n 'property(encoding,5,6).',\n 'attribute((encoding,channel),6,x).',\n 'attribute((encoding,field),6,temperature).',\n 'property(encoding,5,7).',\n 'attribute((encoding,channel),7,y).',\n 'attribute((encoding,aggregate),7,count).',\n 'property(scale,4,8).',\n 'attribute((scale,channel),8,x).',\n 'attribute((scale,type),8,ordinal).',\n 'property(scale,root,9).',\n 'attribute((scale,channel),9,y).',\n 'attribute((scale,type),9,linear).']"
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8-final"
   }
  },
  "nbformat": 4,
