--- a/_sources/api/schema.ipynb
+++ b/_sources/api/schema.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,34 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "{'numberRows': 1461,\n",
-       " 'field': {'date': {'dataType': 'date', 'unique': 1461},\n",
-       "  'precipitation': {'dataType': 'number',\n",
-       "   'unique': 111,\n",
-       "   'min': 0,\n",
-       "   'max': 55,\n",
-       "   'std': 6},\n",
-       "  'temp_max': {'dataType': 'number',\n",
-       "   'unique': 67,\n",
-       "   'min': -1,\n",
-       "   'max': 35,\n",
-       "   'std': 7},\n",
-       "  'temp_min': {'dataType': 'number',\n",
-       "   'unique': 55,\n",
-       "   'min': -7,\n",
-       "   'max': 18,\n",
-       "   'std': 5},\n",
-       "  'wind': {'dataType': 'number', 'unique': 79, 'min': 0, 'max': 9, 'std': 1},\n",
-       "  'weather': {'dataType': 'string', 'unique': 5, 'freq': 714}}}"
-      ]
+      "text/plain": "{'number_rows': 1461,\n 'field': [{'name': 'date', 'type': 'datetime', 'unique': 1461},\n  {'name': 'precipitation',\n   'type': 'number',\n   'unique': 111,\n   'min': 0,\n   'max': 55,\n   'std': 6},\n  {'name': 'temp_max',\n   'type': 'number',\n   'unique': 67,\n   'min': -1,\n   'max': 35,\n   'std': 7},\n  {'name': 'temp_min',\n   'type': 'number',\n   'unique': 55,\n   'min': -7,\n   'max': 18,\n   'std': 5},\n  {'name': 'wind',\n   'type': 'number',\n   'unique': 79,\n   'min': 0,\n   'max': 9,\n   'std': 1},\n  {'name': 'weather', 'type': 'string', 'unique': 5, 'freq': 714}]}"
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,61 +92,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "['fact(numberRows,1461).',\n",
-       " 'fact(field,date).',\n",
-       " 'fact(dataType,date,date).',\n",
-       " 'fact(unique,date,1461).',\n",
-       " 'fact(field,precipitation).',\n",
-       " 'fact(dataType,precipitation,number).',\n",
-       " 'fact(unique,precipitation,111).',\n",
-       " 'fact(min,precipitation,0).',\n",
-       " 'fact(max,precipitation,55).',\n",
-       " 'fact(std,precipitation,6).',\n",
-       " 'fact(field,temp_max).',\n",
-       " 'fact(dataType,temp_max,number).',\n",
-       " 'fact(unique,temp_max,67).',\n",
-       " 'fact(min,temp_max,-1).',\n",
-       " 'fact(max,temp_max,35).',\n",
-       " 'fact(std,temp_max,7).',\n",
-       " 'fact(field,temp_min).',\n",
-       " 'fact(dataType,temp_min,number).',\n",
-       " 'fact(unique,temp_min,55).',\n",
-       " 'fact(min,temp_min,-7).',\n",
-       " 'fact(max,temp_min,18).',\n",
-       " 'fact(std,temp_min,5).',\n",
-       " 'fact(field,wind).',\n",
-       " 'fact(dataType,wind,number).',\n",
-       " 'fact(unique,wind,79).',\n",
-       " 'fact(min,wind,0).',\n",
-       " 'fact(max,wind,9).',\n",
-       " 'fact(std,wind,1).',\n",
-       " 'fact(field,weather).',\n",
-       " 'fact(dataType,weather,string).',\n",
-       " 'fact(unique,weather,5).',\n",
-       " 'fact(freq,weather,714).']"
-      ]
+      "text/plain": "['attribute(number_rows,root,1461).',\n 'property(field,root,0).',\n 'attribute((field,name),0,date).',\n 'attribute((field,type),0,datetime).',\n 'attribute((field,unique),0,1461).',\n 'property(field,root,1).',\n 'attribute((field,name),1,precipitation).',\n 'attribute((field,type),1,number).',\n 'attribute((field,unique),1,111).',\n 'attribute((field,min),1,0).',\n 'attribute((field,max),1,55).',\n 'attribute((field,std),1,6).',\n 'property(field,root,2).',\n 'attribute((field,name),2,temp_max).',\n 'attribute((field,type),2,number).',\n 'attribute((field,unique),2,67).',\n 'attribute((field,min),2,-1).',\n 'attribute((field,max),2,35).',\n 'attribute((field,std),2,7).',\n 'property(field,root,3).',\n 'attribute((field,name),3,temp_min).',\n 'attribute((field,type),3,number).',\n 'attribute((field,unique),3,55).',\n 'attribute((field,min),3,-7).',\n 'attribute((field,max),3,18).',\n 'attribute((field,std),3,5).',\n 'property(field,root,4).',\n 'attribute((field,name),4,wind).',\n 'attribute((field,type),4,number).',\n 'attribute((field,unique),4,79).',\n 'attribute((field,min),4,0).',\n 'attribute((field,max),4,9).',\n 'attribute((field,std),4,1).',\n 'property(field,root,5).',\n 'attribute((field,name),5,weather).',\n 'attribute((field,type),5,string).',\n 'attribute((field,unique),5,5).',\n 'attribute((field,freq),5,714).']"
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "program = dict_to_facts(schema)\n",
-    "list(program)"
+    "dict_to_facts(schema)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('draco': conda)",
+   "metadata": {
+    "interpreter": {
+     "hash": "1417893cfb28aac8f4900ac927ab2a1a6ab7e8af638d894f5471e1fba60b1e80"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
