--- a/_sources/api/spec.ipynb
+++ b/_sources/api/spec.ipynb
@@ -45,17 +45,17 @@
    "source": [
     "valid_spec = \"\"\"\n",
     "attribute(number_rows,root,100).\n",
-    "property(field,root,f1).\n",
+    "entity(field,root,f1).\n",
     "attribute((field,name),f1,temperature).\n",
     "attribute((field,type),f1number).\n",
     "\n",
-    "property(mark,root,m1).\n",
+    "entity(mark,root,m1).\n",
     "attribute((mark,type),m1,tick).\n",
-    "property(encoding,m1,e1).\n",
+    "entity(encoding,m1,e1).\n",
     "attribute((encoding,channel),e1,x).\n",
     "attribute((encoding,field),e1,temperature).\n",
     "\n",
-    "property(scale,root,sx).\n",
+    "entity(scale,root,sx).\n",
     "attribute((scale,channel),sx,x).\n",
     "attribute((scale,type),sx,linear).\n",
     "\"\"\""
@@ -105,18 +105,18 @@
    "source": [
     "invalid_spec = \"\"\"\n",
     "attribute(number_rows,root,100).\n",
-    "property(field,root,f1).\n",
+    "entity(field,root,f1).\n",
     "attribute((field,name),f1,temperature).\n",
     "attribute((field,type),f1number).\n",
     "\n",
-    "property(mark,root,m1).\n",
+    "entity(mark,root,m1).\n",
     "% invalid mark\n",
     "attribute((mark,type),m1,invalid).\n",
-    "property(encoding,m1,e1).\n",
+    "entity(encoding,m1,e1).\n",
     "attribute((encoding,channel),e1,x).\n",
     "attribute((encoding,field),e1,temperature).\n",
     "\n",
-    "property(scale,root,sx).\n",
+    "entity(scale,root,sx).\n",
     "attribute((scale,channel),sx,x).\n",
     "attribute((scale,type),sx,linear).\n",
     "\"\"\""
