deploy: e229c33a644b8713b7aa62cd3e43e0672819dd8c

--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -322,6 +322,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "attribute(number_rows,root,100).\n",
+      "entity(field,root,0).\n",
+      "attribute((field,name),0,temperature).\n",
+      "attribute((field,type),0,number).\n",
+      "entity(mark,root,1).\n",
+      "attribute((mark,type),1,bar).\n",
+      "entity(encoding,1,2).\n",
+      "attribute((encoding,channel),2,x).\n",
+      "attribute((encoding,field),2,temperature).\n",
+      "attribute((encoding,binning),2,10).\n",
+      "entity(encoding,1,3).\n",
+      "attribute((encoding,channel),3,y).\n",
+      "attribute((encoding,aggregate),3,count).\n",
+      "entity(scale,root,4).\n",
+      "attribute((scale,channel),4,x).\n",
+      "attribute((scale,type),4,ordinal).\n",
+      "entity(scale,root,5).\n",
+      "attribute((scale,channel),5,y).\n",
+      "attribute((scale,type),5,linear).\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "['attribute(number_rows,root,100).',\n",
