deploy: 1ae3d745984a0a0e3f9848a4df682f577a177726

--- a/_sources/facts/examples.ipynb
+++ b/_sources/facts/examples.ipynb
@@ -863,7 +863,11 @@
     "                    {\n",
     "                        \"type\": \"bar\",\n",
     "                        \"encoding\": [\n",
-    "                            {\"channel\": \"y\", \"field\": \"temperature\", \"aggregate\": \"mean\"},\n",
+    "                            {\n",
+    "                                \"channel\": \"y\",\n",
+    "                                \"field\": \"temperature\",\n",
+    "                                \"aggregate\": \"mean\",\n",
+    "                            },\n",
     "                            {\"channel\": \"x\", \"field\": \"condition\"},\n",
     "                        ],\n",
     "                    }\n",
